--- a/dictCreator.ipynb
+++ b/dictCreator.ipynb
@@ -2,38 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Ala, GCT, GCC, GCA, GCG\\n',\n",
-      " 'Arg, CGT, CGC, CGA, CGG, AGA, AGG\\n',\n",
-      " 'Asn, AAT, AAC\\n',\n",
-      " 'Asp, GAT, GAC\\n',\n",
-      " 'Cys, TGT, TGC\\n',\n",
-      " 'Gln, CAA, CAG\\n',\n",
-      " 'Glu, GAA, GAG \\n',\n",
-      " 'Gly, GGT, GGC, GGA, GGG\\n',\n",
-      " 'His, CAT, CAC\\n',\n",
-      " 'Ile, ATT, ATC, ATA\\n',\n",
-      " 'START, ATG\\n',\n",
-      " 'Leu, TTA, TTG, CTT, CTC, CTA, CTG\\n',\n",
-      " 'Lys, AAA, AAG\\n',\n",
-      " 'Met, ATG\\n',\n",
-      " 'Phe, TTT, TTC\\n',\n",
-      " 'Pro, CCT, CCC, CCA, CCG\\n',\n",
-      " 'Ser, TCT, TCC, TCA, TCG, AGT, AGC\\n',\n",
-      " 'Thr, ACT, ACC, ACA, ACG\\n',\n",
-      " 'Trp, TGG\\n',\n",
-      " 'Tyr, TAT, TAC\\n',\n",
-      " 'Val, GTT, GTC, GTA, GTG\\n',\n",
-      " 'STOP, TAA, TGA, TAG']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pprint\n",
     "\n",
@@ -43,12 +14,12 @@
     "\n",
     "myfile.close()\n",
     "\n",
-    "pprint.pprint(data)"
+    "#pprint.pprint(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -97,35 +68,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Ala': ' GCT GCC GCA GCG',\n",
-      " 'Arg': ' CGT CGC CGA CGG AGA AGG',\n",
-      " 'Asn': ' AAT AAC',\n",
-      " 'Asp': ' GAT GAC',\n",
-      " 'Cys': ' TGT TGC',\n",
-      " 'Gln': ' CAA CAG',\n",
-      " 'Glu': ' GAA GAG ',\n",
-      " 'Gly': ' GGT GGC GGA GGG',\n",
-      " 'His': ' CAT CAC',\n",
-      " 'Ile': ' ATT ATC ATA',\n",
-      " 'Leu': ' TTA TTG CTT CTC CTA CTG',\n",
-      " 'Lys': ' AAA AAG',\n",
-      " 'Met': ' ATG',\n",
-      " 'Phe': ' TTT TTC',\n",
-      " 'Pro': ' CCT CCC CCA CCG',\n",
-      " 'START': ' ATG',\n",
-      " 'STOP': ' TAA TGA TAG',\n",
-      " 'Ser': ' TCT TCC TCA TCG AGT AGC',\n",
-      " 'Thr': ' ACT ACC ACA ACG',\n",
-      " 'Trp': ' TGG',\n",
-      " 'Tyr': ' TAT TAC',\n",
-      " 'Val': ' GTT GTC GTA GTG'}\n"
+      "[['GCT', 'GCC', 'GCA', 'GCG'], ['CGT', 'CGC', 'CGA', 'CGG', 'AGA', 'AGG'], ['AAT', 'AAC'], ['GAT', 'GAC'], ['TGT', 'TGC'], ['CAA', 'CAG'], ['GAA', 'GAG'], ['GGT', 'GGC', 'GGA', 'GGG'], ['CAT', 'CAC'], ['ATT', 'ATC', 'ATA'], ['ATG'], ['TTA', 'TTG', 'CTT', 'CTC', 'CTA', 'CTG'], ['AAA', 'AAG'], ['ATG'], ['TTT', 'TTC'], ['CCT', 'CCC', 'CCA', 'CCG'], ['TCT', 'TCC', 'TCA', 'TCG', 'AGT', 'AGC'], ['ACT', 'ACC', 'ACA', 'ACG'], ['TGG'], ['TAT', 'TAC'], ['GTT', 'GTC', 'GTA', 'GTG'], ['TAA', 'TGA', 'TAG']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "codonList = []\n",
+    "for sublist in formattedData:\n",
+    "    formattedCodons = []\n",
+    "    for element in sublist[1:]:\n",
+    "        formattedCodons.append(element.strip(' '))\n",
+    "    codonList.append(formattedCodons)\n",
+    "    \n",
+    "print(codonList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Ala': [' GCT', ' GCC', ' GCA', ' GCG'],\n",
+      " 'Arg': [' CGT', ' CGC', ' CGA', ' CGG', ' AGA', ' AGG'],\n",
+      " 'Asn': [' AAT', ' AAC'],\n",
+      " 'Asp': [' GAT', ' GAC'],\n",
+      " 'Cys': [' TGT', ' TGC'],\n",
+      " 'Gln': [' CAA', ' CAG'],\n",
+      " 'Glu': [' GAA', ' GAG '],\n",
+      " 'Gly': [' GGT', ' GGC', ' GGA', ' GGG'],\n",
+      " 'His': [' CAT', ' CAC'],\n",
+      " 'Ile': [' ATT', ' ATC', ' ATA'],\n",
+      " 'Leu': [' TTA', ' TTG', ' CTT', ' CTC', ' CTA', ' CTG'],\n",
+      " 'Lys': [' AAA', ' AAG'],\n",
+      " 'Met': [' ATG'],\n",
+      " 'Phe': [' TTT', ' TTC'],\n",
+      " 'Pro': [' CCT', ' CCC', ' CCA', ' CCG'],\n",
+      " 'START': [' ATG'],\n",
+      " 'STOP': [' TAA', ' TGA', ' TAG'],\n",
+      " 'Ser': [' TCT', ' TCC', ' TCA', ' TCG', ' AGT', ' AGC'],\n",
+      " 'Thr': [' ACT', ' ACC', ' ACA', ' ACG'],\n",
+      " 'Trp': [' TGG'],\n",
+      " 'Tyr': [' TAT', ' TAC'],\n",
+      " 'Val': [' GTT', ' GTC', ' GTA', ' GTG']}\n"
      ]
     }
    ],
@@ -133,15 +128,10 @@
     "codons_to_amino = {}\n",
     "for sublist in formattedData:\n",
     "    aminoAcid = sublist[0]\n",
-    "    codons = ''\n",
-    "    \n",
-    "    for codon in sublist[1:]:\n",
-    "        codons += codon\n",
-    "        \n",
+    "    codons = sublist[1:]\n",
+    "\n",
     "    codons_to_amino.setdefault(aminoAcid, codons)\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "     \n",
     "pprint.pprint(codons_to_amino)"
    ]
   },
