--- a/dictCreator.ipynb
+++ b/dictCreator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,97 +30,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['Ala', ' GCT', ' GCC', ' GCA', ' GCG'],\n",
-      " ['Arg', ' CGT', ' CGC', ' CGA', ' CGG', ' AGA', ' AGG'],\n",
-      " ['Asn', ' AAT', ' AAC'],\n",
-      " ['Asp', ' GAT', ' GAC'],\n",
-      " ['Cys', ' TGT', ' TGC'],\n",
-      " ['Gln', ' CAA', ' CAG'],\n",
-      " ['Glu', ' GAA', ' GAG '],\n",
-      " ['Gly', ' GGT', ' GGC', ' GGA', ' GGG'],\n",
-      " ['His', ' CAT', ' CAC'],\n",
-      " ['Ile', ' ATT', ' ATC', ' ATA'],\n",
-      " ['START', ' ATG'],\n",
-      " ['Leu', ' TTA', ' TTG', ' CTT', ' CTC', ' CTA', ' CTG'],\n",
-      " ['Lys', ' AAA', ' AAG'],\n",
-      " ['Met', ' ATG'],\n",
-      " ['Phe', ' TTT', ' TTC'],\n",
-      " ['Pro', ' CCT', ' CCC', ' CCA', ' CCG'],\n",
-      " ['Ser', ' TCT', ' TCC', ' TCA', ' TCG', ' AGT', ' AGC'],\n",
-      " ['Thr', ' ACT', ' ACC', ' ACA', ' ACG'],\n",
-      " ['Trp', ' TGG'],\n",
-      " ['Tyr', ' TAT', ' TAC'],\n",
-      " ['Val', ' GTT', ' GTC', ' GTA', ' GTG'],\n",
-      " ['STOP', ' TAA', ' TGA', ' TAG']]\n"
+      "[['Ala', 'GCT', 'GCC', 'GCA', 'GCG'],\n",
+      " ['Arg', 'CGT', 'CGC', 'CGA', 'CGG', 'AGA', 'AGG'],\n",
+      " ['Asn', 'AAT', 'AAC'],\n",
+      " ['Asp', 'GAT', 'GAC'],\n",
+      " ['Cys', 'TGT', 'TGC'],\n",
+      " ['Gln', 'CAA', 'CAG'],\n",
+      " ['Glu', 'GAA', 'GAG '],\n",
+      " ['Gly', 'GGT', 'GGC', 'GGA', 'GGG'],\n",
+      " ['His', 'CAT', 'CAC'],\n",
+      " ['Ile', 'ATT', 'ATC', 'ATA'],\n",
+      " ['START', 'ATG'],\n",
+      " ['Leu', 'TTA', 'TTG', 'CTT', 'CTC', 'CTA', 'CTG'],\n",
+      " ['Lys', 'AAA', 'AAG'],\n",
+      " ['Met', 'ATG'],\n",
+      " ['Phe', 'TTT', 'TTC'],\n",
+      " ['Pro', 'CCT', 'CCC', 'CCA', 'CCG'],\n",
+      " ['Ser', 'TCT TCC', 'TCA', 'TCG', 'AGT', 'AGC'],\n",
+      " ['Thr', 'ACT', 'ACC', 'ACA', 'ACG'],\n",
+      " ['Trp', 'TGG'],\n",
+      " ['Tyr', 'TAT', 'TAC'],\n",
+      " ['Val', 'GTT', 'GTC', 'GTA', 'GTG'],\n",
+      " ['STOP', 'TAA', 'TGA', 'TAG']]\n"
      ]
     }
    ],
    "source": [
-    "pprint.pprint(formattedData)"
+    "#pprint.pprint(formattedData)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['GCT', 'GCC', 'GCA', 'GCG'], ['CGT', 'CGC', 'CGA', 'CGG', 'AGA', 'AGG'], ['AAT', 'AAC'], ['GAT', 'GAC'], ['TGT', 'TGC'], ['CAA', 'CAG'], ['GAA', 'GAG'], ['GGT', 'GGC', 'GGA', 'GGG'], ['CAT', 'CAC'], ['ATT', 'ATC', 'ATA'], ['ATG'], ['TTA', 'TTG', 'CTT', 'CTC', 'CTA', 'CTG'], ['AAA', 'AAG'], ['ATG'], ['TTT', 'TTC'], ['CCT', 'CCC', 'CCA', 'CCG'], ['TCT', 'TCC', 'TCA', 'TCG', 'AGT', 'AGC'], ['ACT', 'ACC', 'ACA', 'ACG'], ['TGG'], ['TAT', 'TAC'], ['GTT', 'GTC', 'GTA', 'GTG'], ['TAA', 'TGA', 'TAG']]\n"
-     ]
-    }
-   ],
-   "source": [
-    "codonList = []\n",
-    "for sublist in formattedData:\n",
-    "    formattedCodons = []\n",
-    "    for element in sublist[1:]:\n",
-    "        formattedCodons.append(element.strip(' '))\n",
-    "    codonList.append(formattedCodons)\n",
-    "    \n",
-    "print(codonList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Ala': [' GCT', ' GCC', ' GCA', ' GCG'],\n",
-      " 'Arg': [' CGT', ' CGC', ' CGA', ' CGG', ' AGA', ' AGG'],\n",
-      " 'Asn': [' AAT', ' AAC'],\n",
-      " 'Asp': [' GAT', ' GAC'],\n",
-      " 'Cys': [' TGT', ' TGC'],\n",
-      " 'Gln': [' CAA', ' CAG'],\n",
-      " 'Glu': [' GAA', ' GAG '],\n",
-      " 'Gly': [' GGT', ' GGC', ' GGA', ' GGG'],\n",
-      " 'His': [' CAT', ' CAC'],\n",
-      " 'Ile': [' ATT', ' ATC', ' ATA'],\n",
-      " 'Leu': [' TTA', ' TTG', ' CTT', ' CTC', ' CTA', ' CTG'],\n",
-      " 'Lys': [' AAA', ' AAG'],\n",
-      " 'Met': [' ATG'],\n",
-      " 'Phe': [' TTT', ' TTC'],\n",
-      " 'Pro': [' CCT', ' CCC', ' CCA', ' CCG'],\n",
-      " 'START': [' ATG'],\n",
-      " 'STOP': [' TAA', ' TGA', ' TAG'],\n",
-      " 'Ser': [' TCT', ' TCC', ' TCA', ' TCG', ' AGT', ' AGC'],\n",
-      " 'Thr': [' ACT', ' ACC', ' ACA', ' ACG'],\n",
-      " 'Trp': [' TGG'],\n",
-      " 'Tyr': [' TAT', ' TAC'],\n",
-      " 'Val': [' GTT', ' GTC', ' GTA', ' GTG']}\n"
+      "{'Ala': ['GCT', 'GCC', 'GCA', 'GCG'],\n",
+      " 'Arg': ['CGT', 'CGC', 'CGA', 'CGG', 'AGA', 'AGG'],\n",
+      " 'Asn': ['AAT', 'AAC'],\n",
+      " 'Asp': ['GAT', 'GAC'],\n",
+      " 'Cys': ['TGT', 'TGC'],\n",
+      " 'Gln': ['CAA', 'CAG'],\n",
+      " 'Glu': ['GAA', 'GAG '],\n",
+      " 'Gly': ['GGT', 'GGC', 'GGA', 'GGG'],\n",
+      " 'His': ['CAT', 'CAC'],\n",
+      " 'Ile': ['ATT', 'ATC', 'ATA'],\n",
+      " 'Leu': ['TTA', 'TTG', 'CTT', 'CTC', 'CTA', 'CTG'],\n",
+      " 'Lys': ['AAA', 'AAG'],\n",
+      " 'Met': ['ATG'],\n",
+      " 'Phe': ['TTT', 'TTC'],\n",
+      " 'Pro': ['CCT', 'CCC', 'CCA', 'CCG'],\n",
+      " 'START': ['ATG'],\n",
+      " 'STOP': ['TAA', 'TGA', 'TAG'],\n",
+      " 'Ser': ['TCT TCC', 'TCA', 'TCG', 'AGT', 'AGC'],\n",
+      " 'Thr': ['ACT', 'ACC', 'ACA', 'ACG'],\n",
+      " 'Trp': ['TGG'],\n",
+      " 'Tyr': ['TAT', 'TAC'],\n",
+      " 'Val': ['GTT', 'GTC', 'GTA', 'GTG']}\n"
      ]
     }
    ],
@@ -132,7 +108,7 @@
     "\n",
     "    codons_to_amino.setdefault(aminoAcid, codons)\n",
     "     \n",
-    "pprint.pprint(codons_to_amino)"
+    "#pprint.pprint(codons_to_amino)"
    ]
   },
   {
@@ -140,7 +116,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('codons_to_amino properly loaded in')"
+   ]
   }
  ],
  "metadata": {
