codon to amino now regular csv

--- a/dictCreator.ipynb
+++ b/dictCreator.ipynb
@@ -84,76 +84,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'AAA': None,\n",
-      " 'AAC': None,\n",
-      " 'AAG': None,\n",
-      " 'AAT': None,\n",
-      " 'ACA': None,\n",
-      " 'ACC': None,\n",
-      " 'ACG': None,\n",
-      " 'ACT': None,\n",
-      " 'AGA': None,\n",
-      " 'AGC': None,\n",
-      " 'AGG': None,\n",
-      " 'AGT': None,\n",
-      " 'ATA': None,\n",
-      " 'ATC': None,\n",
-      " 'ATG': None,\n",
-      " 'ATT': None,\n",
-      " 'CAA': None,\n",
-      " 'CAC': None,\n",
-      " 'CAG': None,\n",
-      " 'CAT': None,\n",
-      " 'CCA': None,\n",
-      " 'CCC': None,\n",
-      " 'CCG': None,\n",
-      " 'CCT': None,\n",
-      " 'CGA': None,\n",
-      " 'CGC': None,\n",
-      " 'CGG': None,\n",
-      " 'CGT': None,\n",
-      " 'CTA': None,\n",
-      " 'CTC': None,\n",
-      " 'CTG': None,\n",
-      " 'CTT': None,\n",
-      " 'GAA': None,\n",
-      " 'GAC': None,\n",
-      " 'GAG ': None,\n",
-      " 'GAT': None,\n",
-      " 'GCA': None,\n",
-      " 'GCC': None,\n",
-      " 'GCG': None,\n",
-      " 'GCT': None,\n",
-      " 'GGA': None,\n",
-      " 'GGC': None,\n",
-      " 'GGG': None,\n",
-      " 'GGT': None,\n",
-      " 'GTA': None,\n",
-      " 'GTC': None,\n",
-      " 'GTG': None,\n",
-      " 'GTT': None,\n",
-      " 'TAA': None,\n",
-      " 'TAC': None,\n",
-      " 'TAG': None,\n",
-      " 'TAT': None,\n",
-      " 'TCA': None,\n",
-      " 'TCG': None,\n",
-      " 'TCT TCC': None,\n",
-      " 'TGA': None,\n",
-      " 'TGC': None,\n",
-      " 'TGG': None,\n",
-      " 'TGT': None,\n",
-      " 'TTA': None,\n",
-      " 'TTC': None,\n",
-      " 'TTG': None,\n",
-      " 'TTT': None}\n"
+      "{'AAA': 'Lys',\n",
+      " 'AAC': 'Asn',\n",
+      " 'AAG': 'Lys',\n",
+      " 'AAT': 'Asn',\n",
+      " 'ACA': 'Thr',\n",
+      " 'ACC': 'Thr',\n",
+      " 'ACG': 'Thr',\n",
+      " 'ACT': 'Thr',\n",
+      " 'AGA': 'Arg',\n",
+      " 'AGC': 'Ser',\n",
+      " 'AGG': 'Arg',\n",
+      " 'AGT': 'Ser',\n",
+      " 'ATA': 'Ile',\n",
+      " 'ATC': 'Ile',\n",
+      " 'ATG': 'START',\n",
+      " 'ATT': 'Ile',\n",
+      " 'CAA': 'Gln',\n",
+      " 'CAC': 'His',\n",
+      " 'CAG': 'Gln',\n",
+      " 'CAT': 'His',\n",
+      " 'CCA': 'Pro',\n",
+      " 'CCC': 'Pro',\n",
+      " 'CCG': 'Pro',\n",
+      " 'CCT': 'Pro',\n",
+      " 'CGA': 'Arg',\n",
+      " 'CGC': 'Arg',\n",
+      " 'CGG': 'Arg',\n",
+      " 'CGT': 'Arg',\n",
+      " 'CTA': 'Leu',\n",
+      " 'CTC': 'Leu',\n",
+      " 'CTG': 'Leu',\n",
+      " 'CTT': 'Leu',\n",
+      " 'GAA': 'Glu',\n",
+      " 'GAC': 'Asp',\n",
+      " 'GAG ': 'Glu',\n",
+      " 'GAT': 'Asp',\n",
+      " 'GCA': 'Ala',\n",
+      " 'GCC': 'Ala',\n",
+      " 'GCG': 'Ala',\n",
+      " 'GCT': 'Ala',\n",
+      " 'GGA': 'Gly',\n",
+      " 'GGC': 'Gly',\n",
+      " 'GGG': 'Gly',\n",
+      " 'GGT': 'Gly',\n",
+      " 'GTA': 'Val',\n",
+      " 'GTC': 'Val',\n",
+      " 'GTG': 'Val',\n",
+      " 'GTT': 'Val',\n",
+      " 'TAA': 'STOP',\n",
+      " 'TAC': 'Tyr',\n",
+      " 'TAG': 'STOP',\n",
+      " 'TAT': 'Tyr',\n",
+      " 'TCA': 'Ser',\n",
+      " 'TCG': 'Ser',\n",
+      " 'TCT TCC': 'Ser',\n",
+      " 'TGA': 'STOP',\n",
+      " 'TGC': 'Cys',\n",
+      " 'TGG': 'Trp',\n",
+      " 'TGT': 'Cys',\n",
+      " 'TTA': 'Leu',\n",
+      " 'TTC': 'Phe',\n",
+      " 'TTG': 'Leu',\n",
+      " 'TTT': 'Phe'}\n"
      ]
     }
    ],
@@ -161,9 +161,9 @@
     "aminos_to_codon = {}\n",
     "for key, codonList in codons_to_amino.items():\n",
     "    for element in codonList:\n",
-    "        aminos_to_codon.setdefault(key, element)\n",
+    "        aminos_to_codon.setdefault(element,key)\n",
     "        \n",
-    "pprint.pprint(aminos_to_codons)"
+    "pprint.pprint(aminos_to_codon)"
    ]
   },
   {
