dictCreator correctly builds dict for dna

--- a/dictCreator.ipynb
+++ b/dictCreator.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
       " 'Asp': ['GAT', 'GAC'],\n",
       " 'Cys': ['TGT', 'TGC'],\n",
       " 'Gln': ['CAA', 'CAG'],\n",
-      " 'Glu': ['GAA', 'GAG '],\n",
+      " 'Glu': ['GAA', 'GAG'],\n",
       " 'Gly': ['GGT', 'GGC', 'GGA', 'GGG'],\n",
       " 'His': ['CAT', 'CAC'],\n",
       " 'Ile': ['ATT', 'ATC', 'ATA'],\n",
@@ -63,7 +63,7 @@
       " 'Pro': ['CCT', 'CCC', 'CCA', 'CCG'],\n",
       " 'START': ['ATG'],\n",
       " 'STOP': ['TAA', 'TGA', 'TAG'],\n",
-      " 'Ser': ['TCT TCC', 'TCA', 'TCG', 'AGT', 'AGC'],\n",
+      " 'Ser': ['TCT', 'TCC', 'TCA', 'TCG', 'AGT', 'AGC'],\n",
       " 'Thr': ['ACT', 'ACC', 'ACA', 'ACG'],\n",
       " 'Trp': ['TGG'],\n",
       " 'Tyr': ['TAT', 'TAC'],\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +125,7 @@
       " 'CTT': 'Leu',\n",
       " 'GAA': 'Glu',\n",
       " 'GAC': 'Asp',\n",
-      " 'GAG ': 'Glu',\n",
+      " 'GAG': 'Glu',\n",
       " 'GAT': 'Asp',\n",
       " 'GCA': 'Ala',\n",
       " 'GCC': 'Ala',\n",
@@ -144,8 +144,9 @@
       " 'TAG': 'STOP',\n",
       " 'TAT': 'Tyr',\n",
       " 'TCA': 'Ser',\n",
+      " 'TCC': 'Ser',\n",
       " 'TCG': 'Ser',\n",
-      " 'TCT TCC': 'Ser',\n",
+      " 'TCT': 'Ser',\n",
       " 'TGA': 'STOP',\n",
       " 'TGC': 'Cys',\n",
       " 'TGG': 'Trp',\n",
@@ -168,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -182,6 +183,13 @@
    "source": [
     "print('aminos_to_codons properly loaded in')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
