added more text to start_here

--- a/start_here.ipynb
+++ b/start_here.ipynb
@@ -4,7 +4,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python Workshop 2 #"
+    "# Python Workshop 2\n",
+    "\n",
+    "## Table of Contents\n",
+    "* [The if statement](#The-if-statment)\n",
+    "    * [Exercise set 1](#Exercise-set-1)\n",
+    "* [Common Python containers for data](#Common-Python-containers-for-data)\n",
+    "  * [Tuples](#Tuples)\n",
+    "    * [Exercise Set 2](#Exercise-Set-2)\n",
+    "  * [Lists](#Lists)\n",
+    "    * [Exercise Set 3](#Exercise-Set-3)\n",
+    "  * [Dictionaries](#Dictionaries)\n",
+    "    * [Exercise Set 4](#Exercise-Set-4)\n",
+    "* [Good coding style and coding in a text editor](#Good-coding-style-and-coding-in-a-text-editor)\n",
+    " \n",
+    "<font size=\"1\">Notebook by Nick Sherer, Elliot Urriola, and Matt Zhang</font>\n",
+    "\n",
+    "\n",
+    "## Introduction\n",
+    "\n",
+    "In today's workshop, we'll be covering the <code>if</code> statement, the most common ways to combine different pieces of data in Python, and good coding style and how to code in a text editor.\n",
+    "\n",
+    "The if statement lets you instruct Python to do one thing if a condition is true and another if it is false. It's fairly useful.\n",
+    "\n",
+    "When programming, you'll often find you have a collection of related items like a collection of numbers describing the position of a particle over time or a collection of words making up a sentence. Because this occurs a lot, Python comes with datatypes for very general but useful ways you might want to aggregate data. The most common ones are Tuples, Lists, and Dictionaries. We'll cover the basics of all three.\n",
+    "\n",
+    "Finally, you often will want to reuse code you write for an analysis or to collect data. Jupyter notebooks are good for exploration and presentation, but it can be hard to reuse code from a jupyter notebook. So we're going to talk about coding in a text editor and how to write code that's clear and understandable."
    ]
   },
   {
@@ -31,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
