renamed notebook from containers to data structures

--- a/if statements and data structures.ipynb
+++ b/if statements and data structures.ipynb
@@ -9,7 +9,7 @@
     "## Table of Contents\n",
     "* [Opening Spyder](#Opening-Spyder)\n",
     "* [The if statement](#The-if-statement)\n",
-    "* [Common Python containers for data](#Common-Python-containers-for-data)\n",
+    "* [Common Python data structures](#Common-Python-data-structures)\n",
     " * [Tuples](#Tuples)\n",
     " * [Lists](#Lists)\n",
     " * [Dictionaries](#Dictionaries)\n",
@@ -310,6 +310,14 @@
     "print('my_list is', my_list)\n",
     "remove_fruits(my_list)\n",
     "print('my_list is', my_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dictionaries\n",
+    "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>"
    ]
   },
   {
