added section on dictionaries

--- a/if statements and data structures.ipynb
+++ b/if statements and data structures.ipynb
@@ -205,12 +205,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can change the value of an element in a list like so"
+    "You can access single elements of a list the same way you access elements of a tuple. However, you can also access multiple elements of a list using the same syntax used for arrays that you used in workshop 1."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first element of my_list is apples\n",
+      "The last element of my_list is avocados\n",
+      "The middle elements of my_list are ['oranges', 'bananas', 'starfruits']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The first element of my_list is', my_list[0])\n",
+    "print('The last element of my_list is', my_list[-1])\n",
+    "print('The middle elements of my_list are', my_list[1:4]) # the number before the colon is where you start\n",
+    "# you stop before the number after the colon"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can change the value of an element in a list like so"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -316,16 +345,246 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You can also use lists with <code>for</code> loops."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I really like plums\n",
+      "I really like oranges\n",
+      "I really like bananas\n",
+      "I really like starfruits\n",
+      "I really like avocados\n"
+     ]
+    }
+   ],
+   "source": [
+    "for fruit in my_list:\n",
+    "    print('I really like', fruit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The exercises associated with lists are in the files fibonacci_list_exercise.py and eulers_method_exercise.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Dictionaries\n",
-    "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>"
+    "<font size=\"1\">[Return to Table of Contents](#Table-of-Contents)</font>\n",
+    "\n",
+    "We will now introduce another, quite useful data type in Python. Namely, we will be exploring *dictionaries*.\n",
+    "\n",
+    "Dictionaries are similar to lists in that they are containers for holding data. Lists are probably the python datatype you'll see the most. They're very simple to work with and very general. However they can be very awkward for some purposes.\n",
+    "\n",
+    "For example what if you wanted a data structure with the masses of various planets? You could make a list of their masses in order of average orbital distance starting with Mercury, then going to Venus, then Earth, etc. but then anyone reading your code would have to know the order of the planets to understand it.\n",
+    "\n",
+    "And what if you had ordered the planets by mass instead of distance? Or what if whatever you were working with didn't have any convenient ordering? Well, as long as you can name your items, dictionaries may be a better choice than a list.\n",
+    "\n",
+    "Dictionaries are made by wrapping curly brackets around what are called key-value pairs. Like so."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The planets of our solar system and their masses in multiples of the earth's mass are {'Venus': 0.815, 'Earth': 10.0, 'Mars': 0.11, 'Jupiter': 317.8, 'Saturn': 95.2, 'Uranus': 14.6, 'Neptune': 17.2, 'Pluto': 0.002}\n"
+     ]
+    }
+   ],
+   "source": [
+    "planet_masses = {'Venus': 0.815, 'Earth': 10.0, 'Mars': 0.11, 'Jupiter': 317.8, \n",
+    "                 'Saturn': 95.2, 'Uranus': 14.6, 'Neptune': 17.2, 'Pluto': .002}\n",
+    "# The masses are in units of earth masses\n",
+    "print(\"The planets of our solar system and their masses in multiples of the earth's mass are\", planet_masses)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We saw that with lists, we were able to grab specific pieces of data inside the list by using the indices of the desired element (piece of data) to slice into the list. We were able to do this because all the elements of the list are part of some specific *order*.\n",
+    "\n",
+    "For example, consider the following code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The first element of my_list is plums\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The first element of my_list is', my_list[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionaries, on the other hand, do not have a specified order. So, we cannot slice into them like we did with lists. Take a look at the following code. Running it has produced an error."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-14-5f6d8cb8e449>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplanet_masses\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m: 0"
+     ]
+    }
+   ],
+   "source": [
+    "planet_masses[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To a human, there was clearly an order to the planets we put inside the curly braces. 'Venus' came before 'Earth' and so on. But to Python, there is no order. Instead, we access the data inside our dictionary using what is called the *key*. The syntax is the same as slicing lists, but Python will return what is called the *value*. \n",
+    "\n",
+    "In a dictionary the key and value are identified as shown below.\n",
+    "\n",
+    "{..., key : value, ...}\n",
+    "\n",
+    "We see a key is always the thing on the left of the colon : and the value is always the thing on the right of the colon. Values are accessed using keys as shown below.\n",
+    "\n",
+    "dictionary[key] = value\n",
+    "\n",
+    "Let's take a look at our planet_masses dictionary again."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mass of Jupiter is 317.8 earth masses.\n",
+      "The mass of Neptune is 17.2 earth masses.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('The mass of Jupiter is', planet_masses['Jupiter'], 'earth masses.')\n",
+    "print('The mass of Neptune is', planet_masses['Neptune'], 'earth masses.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarly to lists, you can also add, remove, and edit data from dictionaries."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0553\n",
+      "Earth is 10.0 earth masses.\n",
+      "That's not right...\n",
+      "Earth is 1.0 earth masses.\n"
+     ]
+    }
+   ],
+   "source": [
+    "planet_masses['Mercury'] = .0553\n",
+    "print(planet_masses['Mercury'])\n",
+    "planet_masses.pop('Pluto') # Pluto is not a planet anymore. Remove it from the dictionary.\n",
+    "print(\"Earth is\", planet_masses['Earth'], 'earth masses.')\n",
+    "print(\"That's not right...\")\n",
+    "planet_masses['Earth']=1.0\n",
+    "print(\"Earth is\", planet_masses['Earth'], 'earth masses.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First, notice that we use strings as keys to retrieve or modify elements from dictionaries much like we used number to access elements of a list. Python looks at the keys in your dictionary and reads you the definition associated with it. \n",
+    "\n",
+    "Think about how you would use a dictionary to find the meaning of a word you didn't know in real life. You would search for the exact spelling of the word and read off its meaning.\n",
+    "\n",
+    "<img src = \"files/dictionaryImage.jpg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dictionaries also can be used with <code>for</code> loops. For loops for dictionaries will loop over the keys of the dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mass of Venus is 0.815 earth masses.\n",
+      "The mass of Earth is 1.0 earth masses.\n",
+      "The mass of Mars is 0.11 earth masses.\n",
+      "The mass of Jupiter is 317.8 earth masses.\n",
+      "The mass of Saturn is 95.2 earth masses.\n",
+      "The mass of Uranus is 14.6 earth masses.\n",
+      "The mass of Neptune is 17.2 earth masses.\n",
+      "The mass of Mercury is 0.0553 earth masses.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for planet in planet_masses:\n",
+    "    print('The mass of', planet, 'is', planet_masses[planet], 'earth masses.')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -346,7 +605,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
