--- a/read-spyder.ipynb
+++ b/read-spyder.ipynb
@@ -125,7 +125,9 @@
     "/Users/yourname/Documents\n",
     "\n",
     "Here's an example of the path to a folder on the desktop of a Mac computer:\n",
-    "/Users/yourname/Desktop/myCodeFolder"
+    "/Users/yourname/Desktop/myCodeFolder\n",
+    "\n",
+    "**For the workshop, you should set the working directory to be the folder that contains all the workshop materials** (i.e. the folder this notebook is in). If you're not sure what folder that is, running the command below will output that folder."
    ]
   },
   {
@@ -133,7 +135,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pwd"
+   ]
   }
  ],
  "metadata": {
@@ -152,7 +156,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
